--- a/index.html
+++ b/index.html
@@ -18,7 +18,59 @@
 
 		<title>Hello, world!</title>
 	</head>
-	<body>
+	<body class="bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 mx-auto">
+					<div class="card card-body text-center mt-5">
+						<h1 class="heading display-5 pb-3">Loan Calculator</h1>
+						<form id="loan-form">
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">$</span>
+									</div>
+									<input
+										type="number"
+										class="form-control"
+										id="amount"
+										placeholder="Loan Amount"
+									/>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">%</span>
+									</div>
+									<input
+										type="number"
+										class="form-control"
+										id="interest"
+										placeholder="Interest"
+									/>
+								</div>
+							</div>
+							<div class="form-group">
+								<input
+									type="number"
+									class="form-control"
+									id="years"
+									placeholder="Years to repay"
+								/>
+							</div>
+							<div class="form-group">
+								<input
+									type="submit"
+									value="Calculate"
+									class="btn btn-dark btn-block"
+								/>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- Optional JavaScript -->
 		<script src="app.js"></script>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
