--- a/index.html
+++ b/index.html
@@ -67,6 +67,58 @@
 								/>
 							</div>
 						</form>
+						<!-- Loader -->
+
+						<!-- Results -->
+						<div id="results" class="pt-4">
+							<h2>Results</h2>
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">Monthly Payment</span>
+									</div>
+									<input
+										type="number"
+										class="form-control"
+										id="monthly-payment"
+										disabled
+									/>
+								</div>
+								<!-- end input-group -->
+							</div>
+							<!-- end form group -->
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">Total Payment</span>
+									</div>
+									<input
+										type="number"
+										class="form-control"
+										id="total-payment"
+										disabled
+									/>
+								</div>
+								<!-- end input-group -->
+							</div>
+							<!-- end form group -->
+							<div class="form-group">
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<span class="input-group-text">Total Interest</span>
+									</div>
+									<input
+										type="number"
+										class="form-control"
+										id="total-interest"
+										disabled
+									/>
+								</div>
+								<!-- end input-group -->
+							</div>
+							<!-- end form group -->
+						</div>
+						<!-- end results -->
 					</div>
 				</div>
 			</div>
