--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 							</div>
 						</form>
 						<!-- Loader -->
+						<!-- <div id="loader">
+							<img src="./img/loading.gif" alt="Loading..." />
+						</div> -->
 
 						<!-- Results -->
 						<div id="results" class="pt-4">
