--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>Hello, world!</title>
+		<title>Loan Calculator</title>
 	</head>
 	<body class="bg-dark">
 		<div class="container">
@@ -68,9 +68,9 @@
 							</div>
 						</form>
 						<!-- Loader -->
-						<!-- <div id="loader">
+						<div id="loader">
 							<img src="./img/loading.gif" alt="Loading..." />
-						</div> -->
+						</div>
 
 						<!-- Results -->
 						<div id="results" class="pt-4">
